remove sub headers
