# backend/nodeman/internal/models/service.go
@@ -1,9 +1,5 @@
 package models
 
-import (
-	"github.com/go-faster/jx"
-)
-
 type NewNodeParams struct {
 	Endpoint  string
 	AccessKey AccessKey
@@ -83,28 +79,7 @@ type UserSubParams struct {
 	Name string
 }
 
-type ClientConfigItem = jx.Raw
-
 type UserSubResult struct {
-	Headers       Headers
-	ClientConfigs []ClientConfigItem
-}
-
-type NewSubHeaderParams struct {
-	Key   string
-	Value string
-}
-
-type ListSubHeadersParams struct {
-}
-
-type ListSubHeadersResult struct {
-	Headers []Header
-}
-
-type DeleteSubHeaderParams struct {
-	ID HeaderID
-}
-
-type DeleteSubHeaderResult struct {
+	Headers       SubHeaders
+	ClientConfigs SubContent
 }
