# backend/nodeman/pkg/api/http/openapi/openapi.yaml
@@ -360,85 +360,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /sub/headers/list:
-    get:
-      summary: Get stored subscription headers
-      operationId: ListSubHeaders
-      responses:
-        "200":
-          description: Stored headers as list of key-value pairs
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ListSubHeadersResponse"
-        "default":
-          description: General Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-      tags:
-        - admpage
-      security:
-        - BearerAuth: []
-
-  /sub/headers/new:
-    post:
-      summary: Create a new subscription header
-      operationId: NewSubHeader
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/NewSubHeaderRequest"
-      responses:
-        "200":
-          description: Created subscription header
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NewSubHeaderResponse"
-        "default":
-          description: General Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-      tags:
-        - admpage
-      security:
-        - BearerAuth: []
-
-  /sub/headers/delete:
-    post:
-      summary: Delete subscription header
-      operationId: DeleteSubHeader
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/DeleteSubHeaderRequest"
-
-      responses:
-        "200":
-          description: Delete result
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DeleteSubHeaderResponse"
-        "default":
-          description: General Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-      tags:
-        - admpage
-      security:
-        - BearerAuth: []
-
   /dynconfig/get:
     get:
       summary: Get nodeman dynamic config
@@ -826,59 +747,6 @@ components:
       items:
         $ref: "#/components/schemas/ClientConfigItem"
 
-    HeaderID:
-      type: integer
-
-    Header:
-      type: object
-      properties:
-        ID:
-          $ref: "#/components/schemas/HeaderID"
-        Key:
-          type: string
-        Value:
-          type: string
-      required:
-        - ID
-        - Key
-        - Value
-
-    DeleteSubHeaderRequest:
-      type: object
-      properties:
-        ID:
-          $ref: "#/components/schemas/HeaderID"
-      required:
-        - ID
-
-    DeleteSubHeaderResponse:
-      type: object
-      properties: {}
-
-    NewSubHeaderRequest:
-      type: object
-      properties:
-        Key:
-          type: string
-        Value:
-          type: string
-      required:
-        - Key
-        - Value
-
-    NewSubHeaderResponse:
-      $ref: "#/components/schemas/Header"
-
-    ListSubHeadersResponse:
-      type: object
-      properties:
-        Headers:
-          type: array
-          items:
-            $ref: "#/components/schemas/Header"
-      required:
-        - Headers
-
     Error:
       type: object
       properties:
@@ -920,9 +788,12 @@ components:
           type: string
         TgPage:
           type: string
+        Routing:
+          type: string
       required:
         - SubscrTitle
         - UpdateInterval
         - UserPage
         - UsersMessage
         - TgPage
+        - Routing
